--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -17,14 +17,17 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
+
+      - name: Install Yarn
+        run: npm install -g yarn
       
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Build Storybook
-        run: npm run build-storybook
+        run: yarn build-storybook
 
       - name: Deploy
-        run: npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
+        run: npm deploy-storybook -- --ci --existing-output-dir=storybook-static
         env:
           GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
